[gd_scene load_steps=12 format=3 uid="uid://c85xnv6lqdp0x"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu_ui.gd" id="1_dp7mp"]
[ext_resource type="PackedScene" uid="uid://bejrytt4sq6bk" path="res://scenes/component/random_audio_stream_component.tscn" id="3_i4dyu"]
[ext_resource type="AudioStream" uid="uid://bn4cb0bcarrre" path="res://assets/sounds/click1.ogg" id="4_jllkq"]
[ext_resource type="AudioStream" uid="uid://djt71niioh05v" path="res://assets/sounds/click2.ogg" id="5_p42an"]
[ext_resource type="AudioStream" uid="uid://dldl8cv8fc17h" path="res://assets/sounds/click3.ogg" id="6_f3oqa"]
[ext_resource type="AudioStream" uid="uid://ccryse6ck03yl" path="res://assets/sounds/click4.ogg" id="7_3y4f3"]
[ext_resource type="AudioStream" uid="uid://tuk4rauso048" path="res://assets/sounds/click5.ogg" id="8_0ktoa"]
[ext_resource type="PackedScene" uid="uid://tsyr0nlnlduj" path="res://scenes/ui/vignette_ui.tscn" id="9_hjcbc"]

[sub_resource type="Animation" id="Animation_mson7"]
resource_name = "default"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.196078, 0.196078, 0.196078, 0), Color(0.196078, 0.196078, 0.196078, 0.588235)]
}

[sub_resource type="Animation" id="Animation_rafrl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.196078, 0.196078, 0.196078, 0.588235)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xnuuw"]
_data = {
"RESET": SubResource("Animation_rafrl"),
"default": SubResource("Animation_mson7")
}

[node name="PauseMenuUI" type="CanvasLayer"]
process_mode = 3
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)
script = ExtResource("1_dp7mp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -575.0
offset_bottom = -322.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 0.588235)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xnuuw")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -162.5
offset_right = -300.0
offset_bottom = -162.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 12

[node name="MenuVBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="TitleVBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/MenuVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/MenuVBoxContainer/TitleVBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1
uppercase = true

[node name="ButtonVBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/MenuVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="ResumeButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/MenuVBoxContainer/ButtonVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/MenuVBoxContainer/ButtonVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Options"

[node name="BackMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/MenuVBoxContainer/ButtonVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Back to Menu"

[node name="RandomAudioStreamComponent" parent="." instance=ExtResource("3_i4dyu")]
sounds = Array[AudioStream]([ExtResource("4_jllkq"), ExtResource("5_p42an"), ExtResource("6_f3oqa"), ExtResource("7_3y4f3"), ExtResource("8_0ktoa")])

[node name="VignetteUI" parent="." instance=ExtResource("9_hjcbc")]
layer = 2
visible = false
